test/spec_vectors/elem/fail/module_69.wat
(module (global $g (import "test" "g") (mut i32)) (table 1 funcref) (elem (global.get $g)))